# challenge-sqa-14

./: .coverage  .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  test_main.py
.github/workflows/: ci.yml
issues/: README.md
